--- a/Apps/RESTful.Catalog.API.Utilities/Resource/Resource.resx
+++ b/Apps/RESTful.Catalog.API.Utilities/Resource/Resource.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Data_NotFound" xml:space="preserve">
-    <value>The item doesn't find</value>
+  <data name="NotFound" xml:space="preserve">
+    <value>The data was not found in database.</value>
+  </data>
+  <data name="SomethingWentWrong" xml:space="preserve">
+    <value>Something went wrong. Please try again.</value>
   </data>
 </root>
